# RAG_chatbot_pinecone

./: .gitignore  Building_a_retrieval_function.ipynb  Question_answering_function.ipynb  RAG_chtbot_pinecone.ipynb  README.md  pyproject.toml  upserting YouTube Transcripts.ipynb
