[project]
name = "ai-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "gradio>=6.13.0",
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "openai>=2.23.0",
    "pandas>=3.0.2",
    "pinecone>=9.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.33.1",
    "scraper>=0.1.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]
